# Chess

./: CMakeLists.txt  CMakeUserPresets.json
Chess/: CMakeLists.txt  ChessBoard.qml  ChessLogicCls.cpp  ChessLogicCls.h  ChessUiCls.cpp  ChessUiCls.h  EnumPkg.h  StructPkg.h  main.cpp  main.qml  qml.qrc
Chess/Headers/: ChessCls.h  ConstPkg.h  EnumPkg.h  StructPkg.h  UiChessIfc.h  UiCls.h
Chess/Qml/: ChessBoard.qml  main.qml  qml.qrc
Chess/Sources/: ChessCls.cpp  UiCls.cpp
